# web/openapi.json
@@ -7396,6 +7396,14 @@
             "title": "Trailer Pattern",
             "default": "(?i)trailer"
           },
+          "blacklist_patterns": {
+            "items": {
+              "type": "string"
+            },
+            "type": "array",
+            "title": "Blacklist Patterns",
+            "default": []
+          },
           "scan": {
             "type": "boolean",
             "title": "Scan",
@@ -7555,6 +7563,13 @@
           "trailer_pattern": {
             "type": "string",
             "title": "Trailer Pattern"
+          },
+          "blacklist_patterns": {
+            "items": {
+              "type": "string"
+            },
+            "type": "array",
+            "title": "Blacklist Patterns"
           }
         },
         "type": "object",
@@ -7569,7 +7584,8 @@
           "cd_suffix_template",
           "write_nfo",
           "copy_resources",
-          "trailer_pattern"
+          "trailer_pattern",
+          "blacklist_patterns"
         ],
         "title": "LibraryResponse"
       },
@@ -7776,6 +7792,20 @@
               }
             ],
             "title": "Trailer Pattern"
+          },
+          "blacklist_patterns": {
+            "anyOf": [
+              {
+                "items": {
+                  "type": "string"
+                },
+                "type": "array"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Blacklist Patterns"
           }
         },
         "type": "object",
